@@ -7,12 +7,14 @@ package com.openjiuwen.service.adapters.versatile.agentfw;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.openjiuwen.service.adapters.versatile.autoconfigure.VersatileProperties;
 import com.openjiuwen.service.spec.dto.QueryChunk;
 
 import java.util.ArrayList;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Optional;
 
 /**
@@ -23,14 +25,21 @@ import java.util.Optional;
 final class VersatileResponseExtractor {
     private static final ObjectMapper OBJECT_MAPPER = new ObjectMapper();
 
-    private final String resultNodeName;
+    private final VersatileProperties properties;
+    private final IntentAgentResolver agentResolver;
     private boolean isCompleted;
     private boolean hasFailed;
-    private String result;
+    private final Map<String, String> extractedFields = new LinkedHashMap<>();
     private String error;
+    private boolean pendingInterrupt;
+    private boolean interruptSignalSeen;
+    private String interruptPrompt;
+    private String interruptInputRequirement;
+    private String interruptResumeToken;
 
-    VersatileResponseExtractor(String resultNodeName) {
-        this.resultNodeName = resultNodeName;
+    VersatileResponseExtractor(VersatileProperties properties, IntentAgentResolver agentResolver) {
+        this.properties = Objects.requireNonNull(properties, "properties");
+        this.agentResolver = Objects.requireNonNull(agentResolver, "agentResolver");
     }
 
     List<QueryChunk> consumeLine(String line) {
@@ -43,10 +52,24 @@ final class VersatileResponseExtractor {
         }
 
         Optional<JsonNode> json = readTree(data.get());
+        if (matchesInterruptSignal(data.get(), json)) {
+            interruptSignalSeen = true;
+            extractInterruptFields(json.orElse(null));
+            return new ArrayList<>();
+        }
         if (shouldExtractResult(data.get(), json)) {
-            Optional<String> extracted = extractResult(json.get());
-            if (extracted.isPresent()) {
-                result = extracted.get();
+            if (properties.getResultExtractions() == null || properties.getResultExtractions().isEmpty()) {
+                Optional<String> extracted = extractLegacyText(json.get());
+                if (extracted.isPresent()) {
+                    extractedFields.put("response_content", extracted.get());
+                }
+            } else {
+                extractResultFields(json.get());
+                if (!hasText(extractedFields.get("response_content"))) {
+                    hasFailed = true;
+                    error = "{\"code\":\"VERSATILE_INTENT_RESULT_CONTRACT\","
+                            + "\"reason\":\"missing response_content in three-field result\"}";
+                }
             }
             return new ArrayList<>();
         }
@@ -64,44 +87,95 @@ final class VersatileResponseExtractor {
     }
 
     List<QueryChunk> finish() {
+        if (pendingInterrupt) {
+            Map<String, Object> payload = new LinkedHashMap<>();
+            payload.put("message", interruptPrompt);
+            payload.put("input_requirement", interruptInputRequirement);
+            payload.put("resume_token", interruptResumeToken);
+            return List.of(new QueryChunk(QueryChunk.TYPE_INTERRUPT, payload));
+        }
+        if (!pendingInterrupt
+                && interruptSignalSeenButIncomplete()) {
+            return List.of(new QueryChunk(QueryChunk.TYPE_ERROR,
+                    "{\"code\":\"VERSATILE_INTENT_INTERRUPT_INCOMPLETE\","
+                            + "\"reason\":\"native interrupt missing prompt/input-requirement/resume-token\"}"));
+        }
         if (hasFailed) {
             return List.of(new QueryChunk(QueryChunk.TYPE_ERROR, error));
         }
-        if (isCompleted && result != null) {
-            return List.of(new QueryChunk(QueryChunk.TYPE_CHUNK, answerEnvelope(result)));
+        if (isCompleted && !extractedFields.isEmpty()) {
+            if (properties.getResultExtractions() != null && !properties.getResultExtractions().isEmpty()) {
+                try {
+                    Optional<Map<String, Object>> envelope = buildThreeFieldEnvelope();
+                    if (envelope.isPresent()) {
+                        return List.of(new QueryChunk(QueryChunk.TYPE_CHUNK, envelope.get()));
+                    }
+                    return List.of(new QueryChunk(QueryChunk.TYPE_ERROR,
+                            "{\"code\":\"VERSATILE_INTENT_RESULT_CONTRACT\","
+                                    + "\"reason\":\"missing or invalid three-field result\"}"));
+                } catch (IllegalStateException ex) {
+                    return List.of(new QueryChunk(QueryChunk.TYPE_ERROR, ex.getMessage()));
+                }
+            }
+            Map<String, Object> legacy = new LinkedHashMap<>();
+            legacy.put("type", "answer");
+            legacy.put("output", extractedFields.get("response_content"));
+            return List.of(new QueryChunk(QueryChunk.TYPE_CHUNK, legacy));
         }
         if (isCompleted) {
             return List.of();
         }
-        return List.of(new QueryChunk(QueryChunk.TYPE_INTERRUPT, null));
+        return List.of(new QueryChunk(QueryChunk.TYPE_ERROR,
+                "{\"code\":\"VERSATILE_STREAM_CLOSED_WITHOUT_TERMINAL\","
+                        + "\"reason\":\"no End/exception event\"}"));
     }
 
-    static Optional<String> answerText(Object data) {
-        if (!(data instanceof Map<?, ?> envelope) || !"answer".equals(envelope.get("type"))) {
-            return Optional.empty();
-        }
-        Object output = envelope.get("output");
-        if (output != null && !String.valueOf(output).isBlank()) {
-            return Optional.of(String.valueOf(output));
-        }
-        return Optional.empty();
-    }
-
-    private static Map<String, Object> answerEnvelope(String output) {
-        Map<String, Object> envelope = new LinkedHashMap<>();
-        envelope.put("type", "answer");
-        envelope.put("output", output);
-        return envelope;
+    private static boolean hasText(String value) {
+        return value != null && !value.trim().isEmpty();
     }
 
     private boolean shouldExtractResult(String rawData, Optional<JsonNode> json) {
+        String resultNodeName = properties.getResultNodeName();
         return resultNodeName != null
                 && !resultNodeName.trim().isEmpty()
                 && rawData.contains("\"node_name\":\"" + resultNodeName + "\"")
                 && json.filter(JsonNode::isObject).isPresent();
     }
 
-    private Optional<String> extractResult(JsonNode json) {
+    private boolean matchesInterruptSignal(String rawData, Optional<JsonNode> json) {
+        VersatileProperties.Interrupt interrupt = properties.getInterrupt();
+        if (interrupt == null || !hasText(interrupt.getSignalMatch())) {
+            return false;
+        }
+        return rawData.contains("\"event\":\"" + interrupt.getSignalMatch() + "\"");
+    }
+
+    private void extractInterruptFields(JsonNode json) {
+        VersatileProperties.Interrupt interrupt = properties.getInterrupt();
+        interruptPrompt = readPath(json, interrupt.getPromptGet());
+        interruptInputRequirement = readPath(json, interrupt.getInputRequirementGet());
+        interruptResumeToken = readPath(json, interrupt.getResumeTokenGet());
+        pendingInterrupt = hasText(interruptPrompt)
+                && hasText(interruptInputRequirement)
+                && hasText(interruptResumeToken);
+    }
+
+    private boolean interruptSignalSeenButIncomplete() {
+        return interruptSignalSeen && !pendingInterrupt;
+    }
+
+    private static String readPath(JsonNode json, String path) {
+        if (json == null || !hasText(path)) {
+            return null;
+        }
+        JsonNode node = json.at(path);
+        if (node == null || node.isMissingNode() || node.isNull()) {
+            return null;
+        }
+        return node.isTextual() ? node.asText() : node.toString();
+    }
+
+    private Optional<String> extractLegacyText(JsonNode json) {
         JsonNode resultData = json.at("/custom_rsp_data/data");
         if (resultData.isMissingNode() || resultData.isNull()) {
             resultData = json.get("data");
@@ -115,6 +189,40 @@ final class VersatileResponseExtractor {
             return Optional.of(text.asText());
         }
         return Optional.empty();
+    }
+
+    private void extractResultFields(JsonNode json) {
+        for (VersatileProperties.ResultExtraction rule : properties.getResultExtractions()) {
+            if (rule == null || !hasText(rule.getMatch()) || !hasText(rule.getGet())) {
+                continue;
+            }
+            JsonNode node = json.at(rule.getGet());
+            if (node == null || node.isMissingNode() || node.isNull()) {
+                continue;
+            }
+            String value = node.isTextual() ? node.asText() : node.toString();
+            if (hasText(value)) {
+                extractedFields.put(rule.getMatch(), value);
+            }
+        }
+    }
+
+    private Optional<Map<String, Object>> buildThreeFieldEnvelope() {
+        String responseContent = extractedFields.get("response_content");
+        String intentId = extractedFields.get("intent_id");
+        String workflowAgentId = extractedFields.get("agent_id");
+        if (!hasText(responseContent) || !hasText(intentId)) {
+            return Optional.empty();
+        }
+        String agentId = agentResolver.resolve(intentId, workflowAgentId)
+                .orElseThrow(() -> new IllegalStateException("VERSATILE_INTENT_AGENT_ID_UNMAPPED"));
+        Map<String, Object> envelope = new LinkedHashMap<>();
+        envelope.put("type", "answer");
+        envelope.put("output", responseContent);
+        envelope.put("response_content", responseContent);
+        envelope.put("intent_id", intentId);
+        envelope.put("agent_id", agentId);
+        return Optional.of(envelope);
     }
 
     private boolean containsNodeTypeEnd(JsonNode json) {
